Split string escape into config (#151)

--- a/examples/nextra/mistral/src/app/api/endpoint/batch/page.mdx
+++ b/examples/nextra/mistral/src/app/api/endpoint/batch/page.mdx
@@ -91,7 +91,7 @@ TypeScript
 
 <TryItNow
   dependencyUrlPrefix="/try-it-now"
-  defaultValue="import { Mistral } from &quot;@mistralai/mistralai&quot;;&NewLine;&NewLine;const mistral = new Mistral({&NewLine;  apiKey: &quot;MISTRAL_API_KEY&quot;,&NewLine;});&NewLine;&NewLine;async function run() {&NewLine;  const result = await mistral.batch.jobs.list({});&NewLine;&NewLine;  console.log(result);&NewLine;}&NewLine;&NewLine;run();&NewLine;"
+  defaultValue={`import { Mistral } from \"@mistralai/mistralai\";\n\nconst mistral = new Mistral({\n  apiKey: \"MISTRAL_API_KEY\",\n});\n\nasync function run() {\n  const result = await mistral.batch.jobs.list({});\n\n  console.log(result);\n}\n\nrun();\n`}
   packageName="@mistralai/mistralai"
 />
 
@@ -722,7 +722,7 @@ TypeScript
 
 <TryItNow
   dependencyUrlPrefix="/try-it-now"
-  defaultValue="import { Mistral } from &quot;@mistralai/mistralai&quot;;&NewLine;&NewLine;const mistral = new Mistral({&NewLine;  apiKey: &quot;MISTRAL_API_KEY&quot;,&NewLine;});&NewLine;&NewLine;async function run() {&NewLine;  const result = await mistral.batch.jobs.create({&NewLine;    inputFiles: [&NewLine;      &quot;fe3343a2-3b8d-404b-ba32-a78dede2614a&quot;,&NewLine;    ],&NewLine;    endpoint: &quot;/v1/classifications&quot;,&NewLine;  });&NewLine;&NewLine;  console.log(result);&NewLine;}&NewLine;&NewLine;run();&NewLine;"
+  defaultValue={`import { Mistral } from \"@mistralai/mistralai\";\n\nconst mistral = new Mistral({\n  apiKey: \"MISTRAL_API_KEY\",\n});\n\nasync function run() {\n  const result = await mistral.batch.jobs.create({\n    inputFiles: [\n      \"fe3343a2-3b8d-404b-ba32-a78dede2614a\",\n    ],\n    endpoint: \"/v1/classifications\",\n  });\n\n  console.log(result);\n}\n\nrun();\n`}
   packageName="@mistralai/mistralai"
 />
 
@@ -1388,7 +1388,7 @@ TypeScript
 
 <TryItNow
   dependencyUrlPrefix="/try-it-now"
-  defaultValue="import { Mistral } from &quot;@mistralai/mistralai&quot;;&NewLine;&NewLine;const mistral = new Mistral({&NewLine;  apiKey: &quot;MISTRAL_API_KEY&quot;,&NewLine;});&NewLine;&NewLine;async function run() {&NewLine;  const result = await mistral.batch.jobs.get({&NewLine;    jobId: &quot;4017dc9f-b629-42f4-9700-8c681b9e7f0f&quot;,&NewLine;  });&NewLine;&NewLine;  console.log(result);&NewLine;}&NewLine;&NewLine;run();&NewLine;"
+  defaultValue={`import { Mistral } from \"@mistralai/mistralai\";\n\nconst mistral = new Mistral({\n  apiKey: \"MISTRAL_API_KEY\",\n});\n\nasync function run() {\n  const result = await mistral.batch.jobs.get({\n    jobId: \"4017dc9f-b629-42f4-9700-8c681b9e7f0f\",\n  });\n\n  console.log(result);\n}\n\nrun();\n`}
   packageName="@mistralai/mistralai"
 />
 
@@ -1956,7 +1956,7 @@ TypeScript
 
 <TryItNow
   dependencyUrlPrefix="/try-it-now"
-  defaultValue="import { Mistral } from &quot;@mistralai/mistralai&quot;;&NewLine;&NewLine;const mistral = new Mistral({&NewLine;  apiKey: &quot;MISTRAL_API_KEY&quot;,&NewLine;});&NewLine;&NewLine;async function run() {&NewLine;  const result = await mistral.batch.jobs.cancel({&NewLine;    jobId: &quot;4fb29d1c-535b-4f0a-a1cb-2167f86da569&quot;,&NewLine;  });&NewLine;&NewLine;  console.log(result);&NewLine;}&NewLine;&NewLine;run();&NewLine;"
+  defaultValue={`import { Mistral } from \"@mistralai/mistralai\";\n\nconst mistral = new Mistral({\n  apiKey: \"MISTRAL_API_KEY\",\n});\n\nasync function run() {\n  const result = await mistral.batch.jobs.cancel({\n    jobId: \"4fb29d1c-535b-4f0a-a1cb-2167f86da569\",\n  });\n\n  console.log(result);\n}\n\nrun();\n`}
   packageName="@mistralai/mistralai"
 />
 
