--- a/examples/nextra/mistral/src/app/api/endpoint/beta/libraries/accesses/page.mdx
+++ b/examples/nextra/mistral/src/app/api/endpoint/beta/libraries/accesses/page.mdx
@@ -85,7 +85,7 @@ TypeScript
 
 <TryItNow
   dependencyUrlPrefix="/try-it-now"
-  defaultValue="import { Mistral } from &quot;@mistralai/mistralai&quot;;&NewLine;&NewLine;const mistral = new Mistral({&NewLine;  apiKey: &quot;MISTRAL_API_KEY&quot;,&NewLine;});&NewLine;&NewLine;async function run() {&NewLine;  const result = await mistral.beta.libraries.accesses.list({&NewLine;    libraryId: &quot;d2169833-d8e2-416e-a372-76518d3d99c2&quot;,&NewLine;  });&NewLine;&NewLine;  console.log(result);&NewLine;}&NewLine;&NewLine;run();&NewLine;"
+  defaultValue={`import { Mistral } from \"@mistralai/mistralai\";\n\nconst mistral = new Mistral({\n  apiKey: \"MISTRAL_API_KEY\",\n});\n\nasync function run() {\n  const result = await mistral.beta.libraries.accesses.list({\n    libraryId: \"d2169833-d8e2-416e-a372-76518d3d99c2\",\n  });\n\n  console.log(result);\n}\n\nrun();\n`}
   packageName="@mistralai/mistralai"
 />
 
@@ -399,7 +399,7 @@ TypeScript
 
 <TryItNow
   dependencyUrlPrefix="/try-it-now"
-  defaultValue="import { Mistral } from &quot;@mistralai/mistralai&quot;;&NewLine;&NewLine;const mistral = new Mistral({&NewLine;  apiKey: &quot;MISTRAL_API_KEY&quot;,&NewLine;});&NewLine;&NewLine;async function run() {&NewLine;  const result = await mistral.beta.libraries.accesses.updateOrCreate({&NewLine;    libraryId: &quot;36de3a24-5b1c-4c8f-9d84-d5642205a976&quot;,&NewLine;    sharingIn: {&NewLine;      orgId: &quot;aadd9ae1-f285-4437-884a-091c77efa6fd&quot;,&NewLine;      level: &quot;Viewer&quot;,&NewLine;      shareWithUuid: &quot;0ae92ecb-21ed-47c5-9f7e-0b2cbe325a20&quot;,&NewLine;      shareWithType: &quot;User&quot;,&NewLine;    },&NewLine;  });&NewLine;&NewLine;  console.log(result);&NewLine;}&NewLine;&NewLine;run();&NewLine;"
+  defaultValue={`import { Mistral } from \"@mistralai/mistralai\";\n\nconst mistral = new Mistral({\n  apiKey: \"MISTRAL_API_KEY\",\n});\n\nasync function run() {\n  const result = await mistral.beta.libraries.accesses.updateOrCreate({\n    libraryId: \"36de3a24-5b1c-4c8f-9d84-d5642205a976\",\n    sharingIn: {\n      orgId: \"aadd9ae1-f285-4437-884a-091c77efa6fd\",\n      level: \"Viewer\",\n      shareWithUuid: \"0ae92ecb-21ed-47c5-9f7e-0b2cbe325a20\",\n      shareWithType: \"User\",\n    },\n  });\n\n  console.log(result);\n}\n\nrun();\n`}
   packageName="@mistralai/mistralai"
 />
 
@@ -770,7 +770,7 @@ TypeScript
 
 <TryItNow
   dependencyUrlPrefix="/try-it-now"
-  defaultValue="import { Mistral } from &quot;@mistralai/mistralai&quot;;&NewLine;&NewLine;const mistral = new Mistral({&NewLine;  apiKey: &quot;MISTRAL_API_KEY&quot;,&NewLine;});&NewLine;&NewLine;async function run() {&NewLine;  const result = await mistral.beta.libraries.accesses.delete({&NewLine;    libraryId: &quot;709e3cad-9fb2-4f4e-bf88-143cf1808107&quot;,&NewLine;    sharingDelete: {&NewLine;      orgId: &quot;0814a235-c2d0-4814-875a-4b85f93d3dc7&quot;,&NewLine;      shareWithUuid: &quot;b843cc47-ce8f-4354-8cfc-5fcd7fb2865b&quot;,&NewLine;      shareWithType: &quot;User&quot;,&NewLine;    },&NewLine;  });&NewLine;&NewLine;  console.log(result);&NewLine;}&NewLine;&NewLine;run();&NewLine;"
+  defaultValue={`import { Mistral } from \"@mistralai/mistralai\";\n\nconst mistral = new Mistral({\n  apiKey: \"MISTRAL_API_KEY\",\n});\n\nasync function run() {\n  const result = await mistral.beta.libraries.accesses.delete({\n    libraryId: \"709e3cad-9fb2-4f4e-bf88-143cf1808107\",\n    sharingDelete: {\n      orgId: \"0814a235-c2d0-4814-875a-4b85f93d3dc7\",\n      shareWithUuid: \"b843cc47-ce8f-4354-8cfc-5fcd7fb2865b\",\n      shareWithType: \"User\",\n    },\n  });\n\n  console.log(result);\n}\n\nrun();\n`}
   packageName="@mistralai/mistralai"
 />
 
