--- a/examples/nextra/mistral/src/app/api/endpoint/files/page.mdx
+++ b/examples/nextra/mistral/src/app/api/endpoint/files/page.mdx
@@ -92,7 +92,7 @@ TypeScript
 
 <TryItNow
   dependencyUrlPrefix="/try-it-now"
-  defaultValue="import { Mistral } from &quot;@mistralai/mistralai&quot;;&NewLine;&NewLine;const mistral = new Mistral({&NewLine;  apiKey: &quot;MISTRAL_API_KEY&quot;,&NewLine;});&NewLine;&NewLine;async function run() {&NewLine;  const result = await mistral.files.list({});&NewLine;&NewLine;  console.log(result);&NewLine;}&NewLine;&NewLine;run();&NewLine;"
+  defaultValue={`import { Mistral } from \"@mistralai/mistralai\";\n\nconst mistral = new Mistral({\n  apiKey: \"MISTRAL_API_KEY\",\n});\n\nasync function run() {\n  const result = await mistral.files.list({});\n\n  console.log(result);\n}\n\nrun();\n`}
   packageName="@mistralai/mistralai"
 />
 
@@ -584,7 +584,7 @@ TypeScript
 
 <TryItNow
   dependencyUrlPrefix="/try-it-now"
-  defaultValue="import { Mistral } from &quot;@mistralai/mistralai&quot;;&NewLine;import { openAsBlob } from &quot;node:fs&quot;;&NewLine;&NewLine;const mistral = new Mistral({&NewLine;  apiKey: &quot;MISTRAL_API_KEY&quot;,&NewLine;});&NewLine;&NewLine;async function run() {&NewLine;  const result = await mistral.files.upload({&NewLine;    file: await openAsBlob(&quot;example.file&quot;),&NewLine;  });&NewLine;&NewLine;  console.log(result);&NewLine;}&NewLine;&NewLine;run();&NewLine;"
+  defaultValue={`import { Mistral } from \"@mistralai/mistralai\";\nimport { openAsBlob } from \"node:fs\";\n\nconst mistral = new Mistral({\n  apiKey: \"MISTRAL_API_KEY\",\n});\n\nasync function run() {\n  const result = await mistral.files.upload({\n    file: await openAsBlob(\"example.file\"),\n  });\n\n  console.log(result);\n}\n\nrun();\n`}
   packageName="@mistralai/mistralai"
 />
 
@@ -1137,7 +1137,7 @@ TypeScript
 
 <TryItNow
   dependencyUrlPrefix="/try-it-now"
-  defaultValue="import { Mistral } from &quot;@mistralai/mistralai&quot;;&NewLine;&NewLine;const mistral = new Mistral({&NewLine;  apiKey: &quot;MISTRAL_API_KEY&quot;,&NewLine;});&NewLine;&NewLine;async function run() {&NewLine;  const result = await mistral.files.retrieve({&NewLine;    fileId: &quot;f2a27685-ca4e-4dc2-9f2b-88c422c3e0f6&quot;,&NewLine;  });&NewLine;&NewLine;  console.log(result);&NewLine;}&NewLine;&NewLine;run();&NewLine;"
+  defaultValue={`import { Mistral } from \"@mistralai/mistralai\";\n\nconst mistral = new Mistral({\n  apiKey: \"MISTRAL_API_KEY\",\n});\n\nasync function run() {\n  const result = await mistral.files.retrieve({\n    fileId: \"f2a27685-ca4e-4dc2-9f2b-88c422c3e0f6\",\n  });\n\n  console.log(result);\n}\n\nrun();\n`}
   packageName="@mistralai/mistralai"
 />
 
@@ -1596,7 +1596,7 @@ TypeScript
 
 <TryItNow
   dependencyUrlPrefix="/try-it-now"
-  defaultValue="import { Mistral } from &quot;@mistralai/mistralai&quot;;&NewLine;&NewLine;const mistral = new Mistral({&NewLine;  apiKey: &quot;MISTRAL_API_KEY&quot;,&NewLine;});&NewLine;&NewLine;async function run() {&NewLine;  const result = await mistral.files.delete({&NewLine;    fileId: &quot;3b6d45eb-e30b-416f-8019-f47e2e93d930&quot;,&NewLine;  });&NewLine;&NewLine;  console.log(result);&NewLine;}&NewLine;&NewLine;run();&NewLine;"
+  defaultValue={`import { Mistral } from \"@mistralai/mistralai\";\n\nconst mistral = new Mistral({\n  apiKey: \"MISTRAL_API_KEY\",\n});\n\nasync function run() {\n  const result = await mistral.files.delete({\n    fileId: \"3b6d45eb-e30b-416f-8019-f47e2e93d930\",\n  });\n\n  console.log(result);\n}\n\nrun();\n`}
   packageName="@mistralai/mistralai"
 />
 
@@ -1861,7 +1861,7 @@ TypeScript
 
 <TryItNow
   dependencyUrlPrefix="/try-it-now"
-  defaultValue="import { Mistral } from &quot;@mistralai/mistralai&quot;;&NewLine;&NewLine;const mistral = new Mistral({&NewLine;  apiKey: &quot;MISTRAL_API_KEY&quot;,&NewLine;});&NewLine;&NewLine;async function run() {&NewLine;  const result = await mistral.files.download({&NewLine;    fileId: &quot;f8919994-a4a1-46b2-8b5b-06335a4300ce&quot;,&NewLine;  });&NewLine;&NewLine;  console.log(result);&NewLine;}&NewLine;&NewLine;run();&NewLine;"
+  defaultValue={`import { Mistral } from \"@mistralai/mistralai\";\n\nconst mistral = new Mistral({\n  apiKey: \"MISTRAL_API_KEY\",\n});\n\nasync function run() {\n  const result = await mistral.files.download({\n    fileId: \"f8919994-a4a1-46b2-8b5b-06335a4300ce\",\n  });\n\n  console.log(result);\n}\n\nrun();\n`}
   packageName="@mistralai/mistralai"
 />
 
@@ -2025,7 +2025,7 @@ TypeScript
 
 <TryItNow
   dependencyUrlPrefix="/try-it-now"
-  defaultValue="import { Mistral } from &quot;@mistralai/mistralai&quot;;&NewLine;&NewLine;const mistral = new Mistral({&NewLine;  apiKey: &quot;MISTRAL_API_KEY&quot;,&NewLine;});&NewLine;&NewLine;async function run() {&NewLine;  const result = await mistral.files.getSignedUrl({&NewLine;    fileId: &quot;06a020ab-355c-49a6-b19d-304b7c01699f&quot;,&NewLine;  });&NewLine;&NewLine;  console.log(result);&NewLine;}&NewLine;&NewLine;run();&NewLine;"
+  defaultValue={`import { Mistral } from \"@mistralai/mistralai\";\n\nconst mistral = new Mistral({\n  apiKey: \"MISTRAL_API_KEY\",\n});\n\nasync function run() {\n  const result = await mistral.files.getSignedUrl({\n    fileId: \"06a020ab-355c-49a6-b19d-304b7c01699f\",\n  });\n\n  console.log(result);\n}\n\nrun();\n`}
   packageName="@mistralai/mistralai"
 />
 
