--- a/examples/nextra/mistral/src/app/api/endpoint/fim/page.mdx
+++ b/examples/nextra/mistral/src/app/api/endpoint/fim/page.mdx
@@ -95,7 +95,7 @@ TypeScript
 
 <TryItNow
   dependencyUrlPrefix="/try-it-now"
-  defaultValue="import { Mistral } from &quot;@mistralai/mistralai&quot;;&NewLine;&NewLine;const mistral = new Mistral({&NewLine;  apiKey: &quot;MISTRAL_API_KEY&quot;,&NewLine;});&NewLine;&NewLine;async function run() {&NewLine;  const result = await mistral.fim.complete({&NewLine;    model: &quot;codestral-2405&quot;,&NewLine;    prompt: &quot;def&quot;,&NewLine;    suffix: &quot;return a+b&quot;,&NewLine;  });&NewLine;&NewLine;  console.log(result);&NewLine;}&NewLine;&NewLine;run();&NewLine;"
+  defaultValue={`import { Mistral } from \"@mistralai/mistralai\";\n\nconst mistral = new Mistral({\n  apiKey: \"MISTRAL_API_KEY\",\n});\n\nasync function run() {\n  const result = await mistral.fim.complete({\n    model: \"codestral-2405\",\n    prompt: \"def\",\n    suffix: \"return a+b\",\n  });\n\n  console.log(result);\n}\n\nrun();\n`}
   packageName="@mistralai/mistralai"
 />
 
