--- a/examples/nextra/mistral/src/app/api/endpoint/embeddings/page.mdx
+++ b/examples/nextra/mistral/src/app/api/endpoint/embeddings/page.mdx
@@ -89,7 +89,7 @@ TypeScript
 
 <TryItNow
   dependencyUrlPrefix="/try-it-now"
-  defaultValue="import { Mistral } from &quot;@mistralai/mistralai&quot;;&NewLine;&NewLine;const mistral = new Mistral({&NewLine;  apiKey: &quot;MISTRAL_API_KEY&quot;,&NewLine;});&NewLine;&NewLine;async function run() {&NewLine;  const result = await mistral.embeddings.create({&NewLine;    model: &quot;mistral-embed&quot;,&NewLine;    inputs: [&NewLine;      &quot;Embed this sentence.&quot;,&NewLine;      &quot;As well as this one.&quot;,&NewLine;    ],&NewLine;  });&NewLine;&NewLine;  console.log(result);&NewLine;}&NewLine;&NewLine;run();&NewLine;"
+  defaultValue={`import { Mistral } from \"@mistralai/mistralai\";\n\nconst mistral = new Mistral({\n  apiKey: \"MISTRAL_API_KEY\",\n});\n\nasync function run() {\n  const result = await mistral.embeddings.create({\n    model: \"mistral-embed\",\n    inputs: [\n      \"Embed this sentence.\",\n      \"As well as this one.\",\n    ],\n  });\n\n  console.log(result);\n}\n\nrun();\n`}
   packageName="@mistralai/mistralai"
 />
 
